# strands-pack

./: .env.example  .gitignore  CHECKLIST.md  README.md  SETUP.md  SKILLS_GUIDE.md  env.example  main.py  production_agent_template.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agents/: __init__.py  example_agent.py
docs/: deployment.md  strands-guide.md
examples/: GOOGLE_AUTH.md  agent.py  apigateway_http_api_agent.py  audio_agent.py  box_agent.py  calendly_agent.py  carbon_agent.py  chromadb_agent.py  discord_agent.py  dynamodb_agent.py  eventbridge_scheduler_agent.py  excel_agent.py  gemini_image_agent.py  gemini_music_agent.py  gemini_video_agent.py  github_agent.py  gmail_agent.py  google_calendar_agent.py  google_docs_agent.py  google_drive_agent.py  google_form_agent.py  google_oauth_token.py  google_sheets_agent.py  google_tasks_agent.py  grab_code_agent.py  hue_agent.py  image_agent.py  interactive_agent.py  lambda_agent.py  local_dev_agent.py  local_embeddings_agent.py  managed_resources_agent.py  notify_agent.py  openai_embeddings_agent.py  openai_image_agent.py  openai_video_agent.py  pdf_agent.py  playwright_agent.py  qrcode_agent.py  s3_agent.py  (+8 more)
examples/inputs/: articles.json  employees.csv  knowledge_base.json  orders.csv  products.csv
examples/skills/: skills-guide.md
src/strands_pack/: __init__.py  apigateway_http_api.py  apigateway_rest_api.py  audio.py  aws_tags.py  box.py  calendly.py  carbon.py  chromadb_tool.py  code_reader.py  discord.py  dynamodb.py  eventbridge_scheduler.py  excel.py  ffmpeg.py  gemini_image.py  gemini_music.py  gemini_video.py  github.py  gmail.py  google_auth.py  google_calendar.py  google_docs.py  google_drive.py  google_forms.py  google_sheets.py  google_tasks.py  hue.py  image.py  keyword_search.py  lambda_tool.py  linkedin.py  local_embeddings.py  local_queue.py  local_scheduler.py  managed_resources.py  notify.py  notion.py  openai_embeddings.py  openai_image.py  (+19 more)
src/strands_pack/runtime/: approval_handler.py  job_runner_handler.py
system_prompts/: aws_tools.txt  content_creator.txt  discord.txt  general_tools.txt  github.txt  gmail.txt  google_workspace.txt  s3.txt  sqlite.txt  youtube_read.txt
tests/: __init__.py  test_apigateway_http_api_tool.py  test_apigateway_rest_api_tool.py  test_audio.py  test_aws_tools.py  test_box.py  test_calendly.py  test_carbon_image.py  test_chromadb.py  test_code_reader.py  test_discord.py  test_dynamodb_tool.py  test_eventbridge_scheduler_tool.py  test_excel.py  test_ffmpeg_tools.py  test_gemini_image.py  test_gemini_music.py  test_gemini_video.py  test_github.py  test_gmail_tools.py  test_google_auth.py  test_google_calendar.py  test_google_docs.py  test_google_drive.py  test_google_forms_tools.py  test_google_sheets.py  test_google_tasks.py  test_hue.py  test_image.py  test_imports.py  test_keyword_search.py  test_lambda_tool.py  test_linkedin.py  test_local_embeddings.py  test_local_queue.py  test_local_scheduler.py  test_managed_resources_tool.py  test_notify.py  test_notion.py  test_openai_embeddings.py  (+17 more)
tools/: README.md  __init__.py  example_tool.py  sns_tools.py  sqs_tools.py
